namespace TestReportGenerator.Facades
{
    public interface ITestReportFacade
    {
        void GenerateReport(string path);
    }
}