namespace TestReportGenerator.Models
{
    public enum TestStatus
    {
        Passed,
        Failed,
        Skipped,
        Unknown
    }
}