namespace TestReportGenerator.Services
{
    public interface IFileReader
    {
        bool Exists(string path);
        string ReadAllText(string path);
        string[] ReadAllLines(string path);
    }
}